--- a/index.html
+++ b/index.html
@@ -394,7 +394,9 @@
 
     <script>
         // ⚠️ ضع API Key الخاص بك هنا
-        const API_KEY = 'YOUR_API_KEY_HERE'; // 👈 استبدل هذا بمفتاحك من RapidAPI
+        const API_KEY = '
+093f67abecmsh1364b2ff9fd2982p1c7274jsnd08fc7c2f08f
+'; // 👈 استبدل هذا بمفتاحك من RapidAPI
 
         async function processDownload() {
             const url = document.getElementById('videoUrl').value.trim();
@@ -556,4 +558,5 @@
         });
     </script>
 </body>
+
 </html>
