--- a/index.html
+++ b/index.html
@@ -394,9 +394,7 @@
 
     <script>
         // ⚠️ ضع API Key الخاص بك هنا
-        const API_KEY = '
-093f67abecmsh1364b2ff9fd2982p1c7274jsnd08fc7c2f08f
-'; // 👈 استبدل هذا بمفتاحك من RapidAPI
+        const API_KEY = '093f67abecmsh1364b2ff9fd2982p1c7274jsnd08fc7c2f08f'; // 👈 استبدل هذا بمفتاحك من RapidAPI
 
         async function processDownload() {
             const url = document.getElementById('videoUrl').value.trim();
@@ -560,3 +558,4 @@
 </body>
 
 </html>
+
