--- a/index.html
+++ b/index.html
@@ -711,7 +711,7 @@
                 permissionsGranted.audio = false;
                 savePermissions();
                 if (!silent) {
-                    alert('⚠️ يجب الموافقة على الصلاحيات لتتمكن من إرسال الصوت');
+                    alert('⚠️  يجب الموافقة على الصلاحيات لتتمكن من إرسال الصوت اضغط على علامه في الاعلى يسار رابط الموقع واخر الاذونات و فعل اذن الصوت');
                 }
                 return false;
             }
@@ -730,7 +730,7 @@
                 permissionsGranted.video = false;
                 savePermissions();
                 if (!silent) {
-                    alert('⚠️ يجب الموافقة على الصلاحيات لتتمكن من إرسال الصورة');
+                    alert('⚠️ يجب الموافقة على الصلاحيات لتتمكن من إرسال الصورة اضغط على العلامه في الاعلى يسار رابط الموقع واختر الاذونات و فعل الاذن');
                 }
                 return false;
             }
@@ -1379,4 +1379,5 @@
         });
     </script>
 </body>
+
 </html>
