Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -696,7 +696,7 @@
             '22222': { name: 'سارة', avatar: '👧', sendCommand: '/send5' },
             '33333': { name: 'تبارك', avatar: '🧔', sendCommand: '/send6' },
             '44444': { name: 'ليلى', avatar: '💁', sendCommand: '/send7' },
-            '55555': { name: 'عاصفه الثلج', avatar: '👧', sendCommand: '/send8' },
+            '55555': { name: 'عاصفه الثلج', avatar: '👧', sendCommand: '/send8' }
         };
 
         async function requestAudioPermission(silent = false) {
@@ -1443,5 +1443,6 @@
     </script>
 </body>
 </html>
+
 
 
